2008-06-05  Christian Dywan  <christian@twotoasts.de>

        Reviewed by Alp Toker.

        https://bugs.webkit.org/show_bug.cgi?id=14141
        Please add a version to the Gtk port

        * webkit/webkit.h:
        * webkit/webkitversion.cpp: Added.
        * webkit/webkitversion.h.in: Added.
        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        * webkit/webkitwebview.cpp:

2008-06-01  Alp Toker  <alp@nuanti.com>

        Suggested by Christian Dywan.

        Use float literals for zoom values and improve documentation wording.

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        * webkit/webkitwebview.cpp:

2008-06-01  Alp Toker  <alp@nuanti.com>

        Reviewed by Oliver.

        Remove webkit_web_view_go_backward(),
        webkit_web_view_can_go_backward(). These have been obsoleted by
        the back() versions for quite a while.

        * webkit/webkitwebview.cpp:
        * webkit/webkitwebview.h:

2008-05-31  Alp Toker  <alp@nuanti.com>

        Fix inconsistent zoom docs and enum name landed in r34249. Issue
        noticed by Marco Barisione.

        * webkit/webkitwebview.cpp:

2008-05-30  Carlos Martín Nieto  <carlos@cmartin.tk>

        Reviewed by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18383
        [GTK] The "hovering-over-link" signal arguments aren't documented.

        * webkit/webkitwebview.cpp:

2008-05-29  Marco Barisione  <marco@collabora.co.uk>

        Reviewed (and tweaked) by Alp Toker.

        http://bugs.webkit.org/show_bug.cgi?id=18281
        [GTK] add functions to set/get the zoom level

        * webkit/webkitwebsettings.cpp:
        (_WebKitWebSettingsPrivate::):
        (_WebKitWebSettingsPrivate::webkit_web_settings_class_init):
        (_WebKitWebSettingsPrivate::webkit_web_settings_set_property):
        (_WebKitWebSettingsPrivate::webkit_web_settings_get_property):