@@ -1,3 +1,9 @@
+2008-06-05  Alp Toker  <alp@nuanti.com>
+
+        Add 'Since' documentation for API versioning functions.
+
+        * webkit/webkitversion.cpp:
+
 2008-06-05  Christian Dywan  <christian@twotoasts.de>
 
         Reviewed by Alp Toker.
